--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end align-content-center" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link fw-bold active" aria-current="page" href="#">BERANDA</a>
+          <a class="nav-link fw-bold active" aria-current="page" href="./index.html">BERANDA</a>
           <a class="nav-link fw-bold" href="./menu_makanan_non_login.html">MENU MAKANAN</a>
           <a class="nav-link fw-bold" href="./login.html">MASUK</a>
         </div>
         <div class="d-flex align-content-center text-start m-lg-3">
-          <a href="#" >
+          <a href="./keranjang_belanja_kosong.html" >
             <span class="bi bi-cart4" style="color: #101010; font-size:28px"></span>
           </a>
         </div>
@@ -59,11 +59,11 @@
           <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
             <span class="bi bi-person-circle" style="color: #101010; font-size:28px"></span>
           </a>
-          <ul class="dropdown-menu text-small" style="color: #101010; font-size:12px">
+          <!-- <ul class="dropdown-menu text-small" style="color: #101010; font-size:12px">
             <li><a class="dropdown-item" href="#">User</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Admin</a></li>
-          </ul>
+          </ul> -->
         </div>
       </div>
     </div>
@@ -150,7 +150,7 @@
             <div class="card h-100 bg-light">
               <img src="./assets/img/Produk Terbaru/Gurame Goreng Kremes.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Goreng Kremes</a>
+                <a href="./detail_produk_non_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Goreng Kremes</a>
               </div>
             </div>
           </div>
@@ -159,7 +159,7 @@
             <div class="card h-100 bg-light">
               <img src="./assets/img/Produk Terbaru/Gurame Goreng Menari WarSun.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Goreng WarSun</a>
+                <a href="./detail_produk_non_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Goreng WarSun</a>
               </div>
             </div>
           </div>
@@ -168,7 +168,7 @@
             <div class="card h-100 bg-light">
               <img src="./assets/img/Produk Terbaru/Gurame Saos Mangga.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Saos Mangga</a>
+                <a href="./detail_produk_non_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Saos Mangga</a>
               </div>
             </div>
           </div>
@@ -177,7 +177,7 @@
             <div class="card h-100 bg-light">
               <img src="./assets/img/Produk Terbaru/Sop Gurame Spesial WarSun.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Saos Mangga</a>
+                <a href="./detail_produk_non_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Saos Mangga</a>
               </div>
             </div>
           </div>
@@ -199,7 +199,7 @@
             <div class="card h-100  bg-light">
               <img src="./assets/img/Produk Terbaru/Sop Gurame Spesial WarSun.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010; font-size: 16px;">Sop Gurame Spesial WarSun</a>
+                <a href="./detail_produk_non_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010; font-size: 16px;">Sop Gurame Spesial WarSun</a>
               </div>
             </div>
           </div>
@@ -208,7 +208,7 @@
             <div class="card h-100 bg-light">
               <img src="./assets/img/Rekomendasi Makanan/Ayam Kalasan WarSun.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Ayam Kalasan WarSun</a>
+                <a href="./detail_produk_non_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Ayam Kalasan WarSun</a>
               </div>
             </div>
           </div>
@@ -217,7 +217,7 @@
             <div class="card h-100  bg-light">
               <img src="./assets/img/Rekomendasi Makanan/Ayam Kremes.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Ayam Kremes</a>
+                <a href="./detail_produk_non_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Ayam Kremes</a>
               </div>
             </div>
           </div>
@@ -226,7 +226,7 @@
             <div class="card h-100  bg-light">
               <img src="./assets/img/Rekomendasi Makanan/Sate Ayam.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Sate Ayam</a>
+                <a href="./detail_produk_non_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Sate Ayam</a>
               </div>
             </div>
           </div>
@@ -260,7 +260,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Cumi</a>
+                <a href="./detail_produk_non_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Cumi</a>
               </div>
             </div>
           </div>
@@ -274,7 +274,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Empal</a>
+                <a href="./detail_produk_non_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Empal</a>
               </div>
             </div>
           </div>
@@ -288,7 +288,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Karedok</a>
+                <a href="./detail_produk_non_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Karedok</a>
               </div>
             </div>
           </div>
@@ -302,7 +302,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sambal</a>
+                <a href="./detail_produk_non_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sambal</a>
               </div>
             </div>
           </div>
@@ -316,7 +316,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sate</a>
+                <a href="./detail_produk_non_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sate</a>
               </div>
             </div>
           </div>
@@ -330,7 +330,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
+                <a href="./detail_produk_non_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
               </div>
             </div>
           </div>
@@ -344,7 +344,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
+                <a href="./detail_produk_non_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
               </div>
             </div>
           </div>
@@ -358,7 +358,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Tumis</a>
+                <a href="./detail_produk_non_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Tumis</a>
               </div>
           </div>
           </div>
