--- a/landing_page_login_user.html
+++ b/landing_page_login_user.html
@@ -46,9 +46,8 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end align-content-center" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link fw-bold active" aria-current="page" href="#">BERANDA</a>
-          <a class="nav-link fw-bold" href="./menu_makanan_non_login.html">MENU MAKANAN</a>
-          <a class="nav-link fw-bold" href="#">MASUK</a>
+          <a class="nav-link fw-bold active" aria-current="page" href="./landing_page_login_user.html">BERANDA</a>
+          <a class="nav-link fw-bold" href="./menu_makanan_login_user.html">MENU MAKANAN</a>
         </div>
         <div class="d-flex align-content-center text-start m-lg-3">
           <a href="#" >
@@ -62,7 +61,7 @@
           <ul class="dropdown-menu text-small" style="color: #101010; font-size:12px">
             <li><a class="dropdown-item" href="#">User</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Admin</a></li>
+            <li><a class="dropdown-item" href="./index.html">Keluar</a></li>
           </ul>
         </div>
       </div>
@@ -72,7 +71,7 @@
 
   <!-- Corousel Start -->
   <div class="container">
-    <hr class="border border-2 border-light opacity-50 m-0 " style="border-color: #D3AC48 !important;">
+    <hr class="border border-2 border-light opacity-50 m-0" style="border-color: #D3AC48 !important;">
     <div class="row mt-3">
       <div class="col-12">
 
@@ -371,7 +370,7 @@
     <!-- Button Lihat Semua Menu Start -->
     <div class="row mt-4">
       <div class="d-grid col-6 col-md-3 mx-auto">
-        <a type="button" class="btn text-white" style="background-color: #D3AC48;" href="./menu_makanan_non_login.html">Lihat Semua Menu</a>
+        <a type="button" class="btn text-white" style="background-color: #D3AC48;" href="./menu_makanan_login_user.html">Lihat Semua Menu</a>
       </div>
     </div>
    <!-- Button Lihat Semua Menu End -->
