--- a/detail_produk_login.html
+++ b/detail_produk_login.html
@@ -56,11 +56,17 @@
         <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
           <span class="bi bi-person-circle" style="color: #101010; font-size:28px"></span>
         </a>
+        <ul class="dropdown-menu text-small" style="color: #101010; font-size:12px">
+          <li><a class="dropdown-item" href="#">User</a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="#">Admin</a></li>
+        </ul>
       </div>
     </div>
   </div>
 </nav>
 <!-- Navigasi End --> 
+
 <div class="container">
   <hr class="border border-2 border-light opacity-50 m-0" style="border-color: #D3AC48 !important;">
   <div class="row mt-3 mb-4">
@@ -91,8 +97,7 @@
           </div>
 
         </div>
-
-
+        
     </div>
   </div>
 </div>
