--- a/keranjang_belanja_terisi.html
+++ b/keranjang_belanja_terisi.html
@@ -43,9 +43,8 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end align-content-center" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link fw-bold" aria-current="page" href="./menu_makanan_non_login.html">BERANDA</a>
-        <a class="nav-link fw-bold" href="./menu_makanan_non_login.html">MENU MAKANAN</a>
-        <a class="nav-link fw-bold active" href="./login.html">MASUK</a>
+        <a class="nav-link fw-bold" aria-current="page" href="./landing_page_login_user.html">BERANDA</a>
+        <a class="nav-link fw-bold" href="./menu_makanan_login.html">MENU MAKANAN</a>
       </div>
       <div class="d-flex align-content-center text-start m-lg-3">
         <a href="#" >
@@ -56,41 +55,98 @@
         <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
           <span class="bi bi-person-circle" style="color: #101010; font-size:28px"></span>
         </a>
+        <ul class="dropdown-menu text-small" style="color: #101010; font-size:12px">
+          <li><a class="dropdown-item" href="#">User</a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="./index.html">Keluar</a></li>
+        </ul>
       </div>
     </div>
   </div>
 </nav>
 <!-- Navigasi End --> 
+
 <div class="container">
   <hr class="border border-2 border-light opacity-50 m-0" style="border-color: #D3AC48 !important;">
   <div class="row mt-3 mb-4">
     <div class="col-12">
+
+        <div class="d-flex justify-content-center align-items-center pb-2">
+        <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+            <ol class="breadcrumb text-decoration-none fw-semibold">
+              <li class="breadcrumb-item"><a href="#" style="text-decoration: none; color: #D3AC48;">Home</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Library</li>
+              <li class="breadcrumb-item active" aria-current="page">Library</li>
+            </ol>
+          </nav>
+        </div>
       
       <div class="d-flex justify-content-between align-items-center pb-2">
         <span class="text-dark fw-semibold text-decoration-none h5">Nama Makanan</span>
-        <a href="#!" class="fw-semibold text-decoration-none h5" style="color: #D3AC48;">Kembali</a>
       </div>
 
-        <div class="card h-80 bg-light">
-          <img src="./assets/img/Menu Makanan/Cumi Goreng Tepung.jpg" class="card-img-top" style="width: 100%; height: 337px; object-fit: cover;" alt="...">
-          <div class="card-body">
-            <h5 class="card-title text-center fw-semibold pb-3" style="color: #101010; font-size: 22px;">Cumi Goreng Tepung</h5>
-            <p class="card-text" style="font-size: 17px;">Cumi segar yang digoreng renyah dan gurih menggunakan tepung berbumbu rempah. Cumi-cumi merupakan bahan kuliner seafood yang paling banyak digemari masyarakat. Dan banyak variasi menu masakan yang berbahan dasar dari cumi. Salah satunya menu cumi goreng tepung crispy yang cocok banget untuk lauk maupun untuk camilan di rumah.</p>
-          </div>
-          <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
-            <span class="text-dark fw-semibold text-decoration-none h5">Rp.20.000</span>
-            <a href="#!" class="fw-semibold text-decoration-none h5" style="color: #D3AC48;">Cumi</a>
-          </div>
-
-          <div class="m-3">
-            <form action="#" method="post" enctype="multipart/form-data">
-            <label for="keranjang"><b>Tambah Ke Keranjang</b></label>
-            <input type="number" id="keranjang" name="keranjang" placeholder="">
-            <input type="reset" value="Checkout"><br>
-            </form>
-          </div>
+    <!-- Cart -->
+    <div class="col-lg-12 col-md-12 col-sm-12">
+        <div class="col-lg-12 col-sm-12 hero-feature">
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                      <tr>
+                        <th scope="col">Ceklist</th>
+                        <th scope="col" class="hidden-xs">Produk</th>
+                        <th scope="col">Harga</th>
+                        <th scope="col" class="td-qty align-content-center text-center">Jumlah</th>
+                        <th scope="col">Total Harga</th>
+                        <th scope="col">Aksi</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">1</th>
+                        <td class="hidden-xs">                                
+                            <a href="#">
+                                <img src="https://via.placeholder.com/200x200/" alt="Age Of Wisdom Tan Graphic Tee" title="" width="60" height="60">
+                            </a>
+                        </td>
+                        <td>
+                            <a href="#">Age Of Wisdom Tan Graphic Tee
+                        </td>
+                        <td>
+                            <div class="input-group bootstrap-touchspin">
+                                <span class="input-group-btn">
+                                    <button class="btn btn-warning bootstrap-touchspin-down m-2" type="button">-</button>
+                                </span>
+                                <span class="input-group-addon bootstrap-touchspin-prefix" style="display: none;">
+                                </span>
+                                <input type="text" name="" value="1" class="input-qty form-control text-center" style="display: block;">
+                                <span class="input-group-addon bootstrap-touchspin-postfix" style="display: none;">
+                                </span>
+                                <span class="input-group-btn">
+                                    <button class="btn btn-warning bootstrap-touchspin-up m-2" type="button">+</button>
+                                </span>
+                            </div>
+                        </td>
+                        <td>Mark</td>
+                        <td>
+                            <a href="#" class="remove_cart text-decoration-none" rel="2">
+                                <p class="fa fa-trash-o">Hapus</p>
+                            </a>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  
+            </div>
+            <div class="btn-group btns-cart" style="padding-bottom: 250px;">
+                <button type="button" class="btn btn-primary">Update Cart</button>
+            </div>
 
         </div>
+    </div>
+    <!-- End Cart -->
+
+
+
 
 
     </div>
