--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <title>Login Html</title>
+    <title>Login</title>
     <style>
         body {
           max-height: 100vh;
@@ -43,12 +43,12 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end align-content-center" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link fw-bold" aria-current="page" href="#">BERANDA</a>
+          <a class="nav-link fw-bold" aria-current="page" href="./index.html">BERANDA</a>
           <a class="nav-link fw-bold" href="./menu_makanan_non_login.html">MENU MAKANAN</a>
           <a class="nav-link fw-bold active" href="./login.html">MASUK</a>
         </div>
         <div class="d-flex align-content-center text-start m-lg-3">
-          <a href="#" >
+          <a href="./keranjang_belanja_kosong.html" >
             <span class="bi bi-cart4" style="color: #101010; font-size:28px"></span>
           </a>
         </div>
@@ -56,11 +56,6 @@
           <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
             <span class="bi bi-person-circle" style="color: #101010; font-size:28px"></span>
           </a>
-          <ul class="dropdown-menu text-small" style="color: #101010; font-size:12px">
-            <li><a class="dropdown-item" href="#">User</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Admin</a></li>
-          </ul>
         </div>
       </div>
     </div>
@@ -70,9 +65,10 @@
 <!-- login Start -->
     <div class="container">
     <hr class="border border-2 border-light opacity-50 m-0" style="border-color: #D3AC48 !important;">
-        <div class="row mt-5">
+        <div class="row mt-5 pb-4">
             <div class="col-md-6 offset-md-3">
-                <h1 class="text-center">Login</h1>
+                <h4 class="text-center">Selamat Datang Di Jabar TradiFood</h4>
+                <h5 class="text-center">Silahkan Masuk</h5>
                 <div class="mb-3">
                     <label for="loginEmail" class="form-label">Email</label>
                     <input type="email" class="form-control" id="loginEmail">
@@ -87,17 +83,14 @@
                       Ingatkan Saya
                     </label>
                 </div>
-                <!-- <div class="d-flex justify-content-center align-items-center">
-                    <button class="btn btn-primary" id="loginBtn">Login</button>
-                </div> -->
 
-                    <!-- Button Lihat Semua Menu Start -->
-    <div class="row mt-4">
-        <div class="d-grid col-6 col-md-3 mx-auto">
-          <a type="button" class="btn text-white" id="loginBtn" style="background-color: #D3AC48;" href="./menu_makanan_non_login.html">Login</a>
-        </div>
-      </div>
-     <!-- Button Lihat Semua Menu End -->
+                <!-- Login Start -->
+                <div class="row mt-4">
+                    <div class="d-grid col-6 col-md-3 mx-auto">
+                    <a type="button" class="btn text-white" id="loginBtn" style="background-color: #D3AC48;">Login</a>
+                    </div>
+                </div>
+                <!-- Login End -->
 
                 <br><br>
                 <p class="text-center">Belum Punya Akun? <a href="./registrasi.html" class="text-decoration-none" style="color: #D3AC48;">Buat Akun Baru</a></p>
@@ -151,6 +144,27 @@
     </symbol>
   </svg>
 <!-- SVG End -->
+
+    <script>
+      let loginEmail = document.getElementById ('loginEmail')
+      let loginPassword = document.getElementById ('loginPassword')
+      let loginBtn = document.getElementById ('loginBtn')
+
+      loginBtn.onclick = () => {
+          const data = JSON.parse(localStorage.getItem("registrasiData"));
+          const isRegistered = data.findIndex((value, index) => {
+              return value.email === loginEmail.value && value.password == loginPassword.value
+          })
+          if (isRegistered == -1) {
+              alert('Username atau Password Anda Salah !')
+          }
+          if (data[isRegistered].role == 1) {
+              window.location.href = '/landing_page_login_admin.html'
+          } else {
+              window.location.href = '/landing_page_login_user.html'
+          }
+      };
+    </script>
 
     <!-- Optional JavaScript, JQuery, Popper, Bootstarp Start -->
     <script src="./login.js"></script>
