--- a/menu_makanan_non_login.html
+++ b/menu_makanan_non_login.html
@@ -51,7 +51,7 @@
           <a class="nav-link fw-bold" href="./login.html">MASUK</a>
         </div>
         <div class="d-flex align-content-center text-start m-lg-3">
-          <a href="#">
+          <a href="./keranjang_belanja_kosong.html">
             <span class="bi bi-cart4" style="color: #101010; font-size:28px"></span>
           </a>
         </div>
@@ -60,13 +60,6 @@
             aria-expanded="false">
             <span class="bi bi-person-circle" style="color: #101010; font-size:28px"></span>
           </a>
-          <ul class="dropdown-menu text-small" style="color: #101010; font-size:12px">
-            <li><a class="dropdown-item" href="#">User</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" href="#">Admin</a></li>
-          </ul>
         </div>
       </div>
     </div>
