--- a/detail_produk_login.html
+++ b/detail_produk_login.html
@@ -43,9 +43,8 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end align-content-center" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link fw-bold" aria-current="page" href="./menu_makanan_non_login.html">BERANDA</a>
-        <a class="nav-link fw-bold" href="./menu_makanan_non_login.html">MENU MAKANAN</a>
-        <a class="nav-link fw-bold active" href="./login.html">MASUK</a>
+        <a class="nav-link fw-bold" aria-current="page" href="./menu_makanan_login_user.html">BERANDA</a>
+        <a class="nav-link fw-bold" href="./menu_makanan_login_user.html">MENU MAKANAN</a>
       </div>
       <div class="d-flex align-content-center text-start m-lg-3">
         <a href="#" >
@@ -74,7 +73,7 @@
       
       <div class="d-flex justify-content-between align-items-center pb-2">
         <span class="text-dark fw-semibold text-decoration-none h5">Nama Makanan</span>
-        <a href="#!" class="fw-semibold text-decoration-none h5" style="color: #D3AC48;">Kembali</a>
+        <a href="./menu_makanan_login_user.html" class="fw-semibold text-decoration-none h5" style="color: #D3AC48;">Kembali</a>
       </div>
 
         <div class="card h-80 bg-light">
@@ -89,7 +88,7 @@
           </div>
 
           <div class="m-3">
-            <form action="#" method="post" enctype="multipart/form-data">
+            <form action="./keranjang_belanja_terisi.html" method="post" enctype="multipart/form-data">
             <label for="keranjang"><b>Tambah Ke Keranjang</b></label>
             <input type="number" id="keranjang" name="keranjang" placeholder="">
             <input type="reset" value="Checkout"><br>
