--- a/keranjang_belanja_kosong.html
+++ b/keranjang_belanja_kosong.html
@@ -67,12 +67,12 @@
   <div class="row mt-3 mb-4">
     <div class="col-12">
 
-        <div class="d-flex justify-content-center align-items-center pb-2">
+      <div class="d-flex justify-content-center align-items-center pb-2">
         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb text-decoration-none fw-semibold">
-              <li class="breadcrumb-item"><a href="#" style="text-decoration: none; color: #D3AC48;">Home</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Library</li>
-              <li class="breadcrumb-item active" aria-current="page">Library</li>
+              <li class="breadcrumb-item"><a href="#" style="text-decoration: none; color: #D3AC48;">Kerang Belanja</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Detail Tagihan</li>
+              <li class="breadcrumb-item active" aria-current="page">Pesanan</li>
             </ol>
           </nav>
         </div>
@@ -84,7 +84,7 @@
     <!-- Cart -->
     <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="col-lg-12 col-sm-12 hero-feature">
-            <div class="table-responsive">
+            <div class="table-responsive" style="padding-bottom: 240px;">
                 <table class="table">
                     <thead>
                       <tr>
@@ -109,8 +109,9 @@
                   </table>
                   
             </div>
-            <div class="btn-group btns-cart" style="padding-bottom: 250px;">
-                <button type="button" class="btn btn-primary">Update Cart</button>
+
+            <div class="btn-group btns-cart">
+              <button type="button" class="btn btn-primary" style="background-color: #D3AC48; border: #D3AC48;">Detail Tagihan</button>
             </div>
 
         </div>
@@ -128,7 +129,7 @@
 <!-- Footer Start Start -->
     <footer class="d-flex flex-wrap justify-content-between align-items-center pb-4 pt-4 border-top bg-light">
       <div class="container">
-      <div class="row">
+      <div class="row mt-3">
           <div class="col-md-8 justify-content-center justify-content-md-start d-flex">
           <span class="mb-3 mb-md-0 fw-semibold">&copy; 2022 - Jabar TradiFood | All rights reserved.</span>
           </div>
