--- a/keranjang_belanja_terisi.html
+++ b/keranjang_belanja_terisi.html
@@ -44,7 +44,7 @@
     <div class="collapse navbar-collapse justify-content-end align-content-center" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link fw-bold" aria-current="page" href="./landing_page_login_user.html">BERANDA</a>
-        <a class="nav-link fw-bold" href="./menu_makanan_login.html">MENU MAKANAN</a>
+        <a class="nav-link fw-bold" href="./menu_makanan_login_user.html">MENU MAKANAN</a>
       </div>
       <div class="d-flex align-content-center text-start m-lg-3">
         <a href="#" >
@@ -74,9 +74,9 @@
         <div class="d-flex justify-content-center align-items-center pb-2">
         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb text-decoration-none fw-semibold">
-              <li class="breadcrumb-item"><a href="#" style="text-decoration: none; color: #D3AC48;">Home</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Library</li>
-              <li class="breadcrumb-item active" aria-current="page">Library</li>
+              <li class="breadcrumb-item"><a href="#" style="text-decoration: none; color: #D3AC48;">Kerang Belanja</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Detail Tagihan</li>
+              <li class="breadcrumb-item active" aria-current="page">Pesanan</li>
             </ol>
           </nav>
         </div>
@@ -88,7 +88,7 @@
     <!-- Cart -->
     <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="col-lg-12 col-sm-12 hero-feature">
-            <div class="table-responsive">
+            <div class="table-responsive" style="padding-bottom: 170px;">
                 <table class="table">
                     <thead>
                       <tr>
@@ -102,14 +102,18 @@
                     </thead>
                     <tbody>
                       <tr>
-                        <th scope="row">1</th>
+                        <th scope="row">
+                          <div class="form-check mb-5">
+                            <input class="form-check-input" style="background-color: #D3AC48; border-color: #D3AC48 !important;" type="checkbox" value="" id="flexCheckChecked" checked>
+                        </div>
+                        </th>
                         <td class="hidden-xs">                                
                             <a href="#">
-                                <img src="https://via.placeholder.com/200x200/" alt="Age Of Wisdom Tan Graphic Tee" title="" width="60" height="60">
+                                <img src="https://via.placeholder.com/200x200/" alt="" title="" width="60" height="60">
                             </a>
                         </td>
                         <td>
-                            <a href="#">Age Of Wisdom Tan Graphic Tee
+                          Rp. 20.000
                         </td>
                         <td>
                             <div class="input-group bootstrap-touchspin">
@@ -126,7 +130,9 @@
                                 </span>
                             </div>
                         </td>
-                        <td>Mark</td>
+                        <td>
+                          Rp. 20.000
+                        </td>
                         <td>
                             <a href="#" class="remove_cart text-decoration-none" rel="2">
                                 <p class="fa fa-trash-o">Hapus</p>
@@ -137,8 +143,9 @@
                   </table>
                   
             </div>
-            <div class="btn-group btns-cart" style="padding-bottom: 250px;">
-                <button type="button" class="btn btn-primary">Update Cart</button>
+
+            <div class="btn-group btns-cart">
+                <button type="button" class="btn btn-primary" style="background-color: #D3AC48; border: #D3AC48;">Detail Tagihan</button>
             </div>
 
         </div>
@@ -156,7 +163,7 @@
 <!-- Footer Start Start -->
     <footer class="d-flex flex-wrap justify-content-between align-items-center pb-4 pt-4 border-top bg-light">
       <div class="container">
-      <div class="row">
+      <div class="row mt-3">
           <div class="col-md-8 justify-content-center justify-content-md-start d-flex">
           <span class="mb-3 mb-md-0 fw-semibold">&copy; 2022 - Jabar TradiFood | All rights reserved.</span>
           </div>
