--- a/landing_page_login_user.html
+++ b/landing_page_login_user.html
@@ -149,7 +149,7 @@
             <div class="card h-100 bg-light">
               <img src="./assets/img/Produk Terbaru/Gurame Goreng Kremes.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Goreng Kremes</a>
+                <a href="./detail_produk_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Goreng Kremes</a>
               </div>
             </div>
           </div>
@@ -158,7 +158,7 @@
             <div class="card h-100 bg-light">
               <img src="./assets/img/Produk Terbaru/Gurame Goreng Menari WarSun.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Goreng WarSun</a>
+                <a href="./detail_produk_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Goreng WarSun</a>
               </div>
             </div>
           </div>
@@ -167,7 +167,7 @@
             <div class="card h-100 bg-light">
               <img src="./assets/img/Produk Terbaru/Gurame Saos Mangga.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Saos Mangga</a>
+                <a href="./detail_produk_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Saos Mangga</a>
               </div>
             </div>
           </div>
@@ -176,7 +176,7 @@
             <div class="card h-100 bg-light">
               <img src="./assets/img/Produk Terbaru/Sop Gurame Spesial WarSun.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Saos Mangga</a>
+                <a href="./detail_produk_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Saos Mangga</a>
               </div>
             </div>
           </div>
@@ -198,7 +198,7 @@
             <div class="card h-100  bg-light">
               <img src="./assets/img/Produk Terbaru/Sop Gurame Spesial WarSun.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010; font-size: 16px;">Sop Gurame Spesial WarSun</a>
+                <a href="./detail_produk_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010; font-size: 16px;">Sop Gurame Spesial WarSun</a>
               </div>
             </div>
           </div>
@@ -207,7 +207,7 @@
             <div class="card h-100 bg-light">
               <img src="./assets/img/Rekomendasi Makanan/Ayam Kalasan WarSun.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Ayam Kalasan WarSun</a>
+                <a href="./detail_produk_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Ayam Kalasan WarSun</a>
               </div>
             </div>
           </div>
@@ -216,7 +216,7 @@
             <div class="card h-100  bg-light">
               <img src="./assets/img/Rekomendasi Makanan/Ayam Kremes.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Ayam Kremes</a>
+                <a href="./detail_produk_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Ayam Kremes</a>
               </div>
             </div>
           </div>
@@ -225,7 +225,7 @@
             <div class="card h-100  bg-light">
               <img src="./assets/img/Rekomendasi Makanan/Sate Ayam.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Sate Ayam</a>
+                <a href="./detail_produk_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Sate Ayam</a>
               </div>
             </div>
           </div>
@@ -259,7 +259,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Cumi</a>
+                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Cumi</a>
               </div>
             </div>
           </div>
@@ -273,7 +273,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Empal</a>
+                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Empal</a>
               </div>
             </div>
           </div>
@@ -287,7 +287,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Karedok</a>
+                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Karedok</a>
               </div>
             </div>
           </div>
@@ -301,7 +301,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sambal</a>
+                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sambal</a>
               </div>
             </div>
           </div>
@@ -315,7 +315,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sate</a>
+                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sate</a>
               </div>
             </div>
           </div>
@@ -329,7 +329,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
+                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
               </div>
             </div>
           </div>
@@ -343,7 +343,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
+                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
               </div>
             </div>
           </div>
@@ -357,7 +357,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Tumis</a>
+                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Tumis</a>
               </div>
           </div>
           </div>
