--- a/menu_makanan_non_login.html
+++ b/menu_makanan_non_login.html
@@ -128,7 +128,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Cumi</a>
+                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Cumi</a>
               </div>
             </div>
           </div>
@@ -142,7 +142,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Empal</a>
+                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Empal</a>
               </div>
             </div>
           </div>
@@ -156,7 +156,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Karedok</a>
+                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Karedok</a>
               </div>
             </div>
           </div>
@@ -171,7 +171,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sambal</a>
+                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sambal</a>
               </div>
             </div>
           </div>
@@ -186,7 +186,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sate</a>
+                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sate</a>
               </div>
             </div>
           </div>
@@ -201,7 +201,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
+                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
               </div>
             </div>
           </div>
@@ -216,7 +216,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
+                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
               </div>
             </div>
           </div>
@@ -231,7 +231,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Tumis</a>
+                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Tumis</a>
               </div>
             </div>
           </div>
@@ -245,7 +245,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Tumis</a>
+                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Tumis</a>
               </div>
             </div>
           </div>
@@ -259,7 +259,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Tumis</a>
+                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Tumis</a>
               </div>
             </div>
           </div>
@@ -273,7 +273,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Udang</a>
+                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Udang</a>
               </div>
             </div>
           </div>
@@ -287,7 +287,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="#!" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Udang</a>
+                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Udang</a>
               </div>
             </div>
           </div>
